--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -51,6 +51,8 @@ Critical habitat presented in this section are available in the Government of Ca
 ```{r all-sar-load, echo=FALSE, results='asis'}
 # not plotted
 outputListSardist <- master_intersect(sardist_rr$data_sf, mapDataList)
+distTable <- create_sar_tables(sardist_rr$data_sf, listed_species, extraCols = c("Species_Link"))$sarData
+summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
 
 # plotted with colour
 legendNameCrithab <- "Common Name"
@@ -61,8 +63,7 @@ outputListLB <- master_intersect(leatherback_rr$data_sf, mapDataList)
 
 critHabCheck <- !is.null(outputListCrithab$studyData) | !is.null(outputListLB$studyData)
 
-distTable <- table_dist(outputListSardist$studyData, "EN")
-summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
+
 
 ```
 *
