--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -51,6 +51,8 @@ Les habitats essentiels présentés dans cette section sont disponibles sur le p
 ```{r all-sar-load, echo=FALSE, results='asis'}
 # not plotted
 outputListSardist <- master_intersect(sardist_rr$data_sf, mapDataList)
+distTable <- create_sar_tables(sardist_rr$data_sf, listed_species, extraCols = c("Species_Link"))$sarData
+summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
 
 # plotted with colour
 legendNameCrithab <- "Nom Commun"
@@ -60,9 +62,6 @@ outputListCrithab <- master_intersect(crithab_rr$data_sf, mapDataList)
 outputListLB <- master_intersect(leatherback_rr$data_sf, mapDataList)
 
 critHabCheck <- !is.null(outputListCrithab$studyData) | !is.null(outputListLB$studyData)
-
-distTable <- table_dist(outputListSardist$studyData, "FR")
-summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Nom Commun", "Nom Commun")
 
 ```
 *
