--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -99,7 +99,7 @@ writeLines(noquote(pasBay_rr$text$fr))
 ```{r pasBay-results, include=FALSE, cache=FALSE}
 pasBayClipped <- master_intersect(pasBay_rr$data_sf, mapDataList)
 
-tableList <- create_table_ilts(pasBayClipped$studyData, listed_species)
+tableList <- create_sar_tables(pasBayClipped$studyData, listed_species)
 pasBayAllTable <- tableList$allSpecies
 pasBaySarTable <- tableList$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "[CBBP](#pasBay-section)", pasBaySarTable, "Common Name", "Common Name")
@@ -154,7 +154,7 @@ From [@ILTS]: “An annual trawl survey is conducted in Southwestern Nova Scotia
 ```{r ilts-results, include=FALSE, cache=FALSE}
 iltsClipped <- master_intersect(ilts_rr$data_sf, mapDataList)
 
-tableList <- create_table_ilts(iltsClipped$studyData, listed_species)
+tableList <- create_sar_tables(iltsClipped$studyData, listed_species)
 iltsAllTable <- tableList$allSpecies
 iltsSarTable <- tableList$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "[ILTS](#ilts-section)", iltsSarTable, "Common Name", "Common Name")
@@ -308,7 +308,7 @@ Le SIBO est un centre mondial de données et d’information en libre accès sur
 ```{r obis-results, include=FALSE, cache=FALSE}
 outputList <- master_intersect(obisFish_rr$data_sf, mapDataList, Year = minYear)
 
-obisTable <- create_table_OBIS(outputList$studyData)
+obisTable <- create_sar_tables(outputList$studyData, listed_species, extraCols = c())$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "[OBIS](#OBIS-section)", obisTable, "Common Name", "Common Name")
 ```
 *
