--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -51,10 +51,7 @@ Critical habitat presented in this section are available in the Government of Ca
 ```{r all-sar-load, echo=FALSE, results='asis'}
 # not plotted
 outputListSardist <- master_intersect(sardist_rr$data_sf, mapDataList)
-distTable <- create_sar_tables(sardist_rr$data_sf, listed_species, extraCols = c("Species_Link"))$sarData
-summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
-
-distTable <- table_dist(outputListSardist$studyData, "EN")
+distTable <- create_sar_tables(outputListSardist$studyData, listed_species, extraCols = c("Species_Link"))$sarData
 summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
 
 # plotted with colour
