--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -21,6 +21,28 @@ Data, and Methods},
   year = {2020}
 }
 
+
+@techreport{Bowlby2013EF,
+  author = {Bowlby, H. D. and Gibson, A.J.F. and Levy, A.},
+  title = {Recovery Potential Assessment for Southern Upland Atlantic Salmon, 2013 – Appendix 1},
+howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/40608815.pdf},
+year = {2013}
+}
+
+@techreport{Bowlby2009EF,
+  author = {Bowlby, H. D. and Gibson, A.J.F.},
+  title = {Review of DFO Science information for Atlantic salmon (Salmo salar) populations in the eastern Cape Breton region of Nova Scotia, 2009 – Table 3.2.2.},
+howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/339227.pdf},
+year = {2009}
+}
+
+@techreport{Jones2018EF,
+  author = {Jones, R. A. and Ratelle, S. M. and Tuziak, S. M. and Harvie, C. and Lenentine, B. and O’Reilly, P. T.},
+  title = {Review of the IBoF Atlantic Salmon (Salmo salar) Monitoring Activities Associated with the Live Gene Bank, 2018 – Appendix 9},
+howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/40873146.pdf},
+year = {2018}
+}
+
 @techreport{Lazin2021,
   author = {Lazin, G. and Hamer, A. and Greyson, P. and Hawthorne, C. and In Preparation.},
   title = {Mapping intertidal vegetation and rockweed presence in Maritimes with Sentinel-2 satellite data},
