--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -51,7 +51,7 @@ Les habitats essentiels présentés dans cette section sont disponibles sur le p
 ```{r all-sar-load, echo=FALSE, results='asis'}
 # not plotted
 outputListSardist <- master_intersect(sardist_rr$data_sf, mapDataList)
-distTable <- create_sar_tables(sardist_rr$data_sf, listed_species, extraCols = c("Species_Link"))$sarData
+distTable <- create_sar_tables(outputListSardist$studyData, listed_species, extraCols = c("Species_Link"))$sarData
 summaryHabTable <- add_to_hab_summary(summaryHabTable, "range", "[SAR Distribution](#sardist-section)",  distTable, "Common Name", "Common Name")
 
 # plotted with colour
